# pass-book

./: .gitignore  Cargo.toml
.github/workflows/: pass-book.yml
dart/: pubspec.yaml
dart/lib/: index.dart  passbook_program.dart
dart/lib/accounts/: constants.dart  passbook.dart  store.dart
dart/lib/utils/: endian.dart  struct_reader.dart
dart/test/: passbook_test.dart
dart/test/fixtures/: passbook.dart
js/: package-lock.json  package.json
js/src/: PassBookProgram.ts  pass-book.ts
js/src/accounts/: Pass.ts  PassBook.ts  Store.ts  constants.ts
js/src/transactions/: InitPassBook.ts
js/test/: init-pass-book.test.ts
js/test/actions/: init-pass-book.ts  init-pass.ts
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  math.rs  processor.rs  utils.rs
program/src/state/: master_pass.rs  (+4 more)
program/tests/: init_master_pass.rs  init_pass_book.rs  lib.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  utils.rs
src/processor/: activate_pass_book.rs  buy_pass_book.rs  deactivate_pass_book.rs  delete_pass_book.rs  edit_pass_book.rs  init_copy.rs  init_pass_book copy.rs  init_pass_book.rs  init_pass_book3.rs
src/state/: membership.rs  mod.rs  pass.rs  pass_book.rs  payout.rs  store.rs  trade_history.rs  uses.rs
tests/: activate_pass_book.rs  buy_pass_book.rs  deactivate_pass_book.rs  delete_pass_book.rs  edit_pass_book.rs  init_pass_book.rs
tests/utils/: assert.rs  edition_marker.rs  master_edition_v2.rs  membership.rs  metadata.rs  mod.rs  pass_book.rs  payout.rs  store.rs  token.rs  trade_history.rs  user.rs
(+8 files in other folders)
